resolve spacing issue with drop downs

--- a/src/app/components/golfer-picks-form/golfer-picks-form.component.scss
+++ b/src/app/components/golfer-picks-form/golfer-picks-form.component.scss
@@ -30,3 +30,8 @@
     font-size: 16px;
   }
 }
+
+.golf-pick-field {
+  margin-right: 5px;
+  margin-left: 5px;
+}
